--- a/threejs-miniproject/style.css
+++ b/threejs-miniproject/style.css
@@ -88,7 +88,7 @@ footer {
 	left: 0;
 	right: 0;
 	padding: 0.5rem;
-	background-color: hsl(50 100% 100% / 0.5);
+	background-color: white;
 	display: flex;
 	flex-flow: column nowrap;
 	gap: 0.5rem;
